@@ -660,6 +660,11 @@ read
 	There are people who occasionally backport debootstrap to stable
 	versions, hunt for them.
       </para>
+      <para>
+	When there are errors with debootstrap phase, debootstrap script needs to be 
+	fixed.
+	pbuilder does not provide a way to work around debootstrap.
+      </para>
     </sect1>
     <sect1>
       <title>Notes on usage of $TMPDIR</title>
