@@ -210,6 +210,7 @@ This is used in
 .B "build"
 and 
 .B "create"
+ (after successfully creating the initial chroot)
 and 
 .B "update"
 
