@@ -1,3 +1,10 @@
+2004-01-06  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: Notes on debootstrap failures.
+
+	* pbuilder.8: add a note so that people won't mistake pbuilder will use --extrapackage for 
+	creating the bootstrap script.
+
 2003-12-31  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml: updated doc so that user-mode-linux is 
